--- a/WTRouter/composer.json
+++ b/WTRouter/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "webtech/WTRouter",
-    "Description": "webtech/mvc",
+    "Description": "system/mvc",
     "type": "project",
     "autor": {
         "name": "wesley",
