--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,12 @@
     "autoload": {
         "classmap": [
             "database",
-            "lib"
+            "lib",
+            "helpers"
         ],
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "App\\Controller\\": "app/controllers/"
         }
     }
 }
