--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         ],
         "psr-4": {
             "App\\": "app/",
-            "App\\Controller\\": "app/controllers/"
+            "App\\Controller\\": "app/controllers/",
+            "App\\Model\\": "app/models/"
         }
     }
 }
