--- a/public_html/.htaccess
+++ b/public_html/.htaccess
@@ -13,3 +13,4 @@ RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f [OR]
 RewriteCond %{REQUEST_FILENAME} \.php$
 RewriteRule (.*) index.php [QSA,L]
+ErrorDocument 404 /views/404.php
