--- a/composer.json
+++ b/composer.json
@@ -10,17 +10,14 @@
     "autoload": {
         "classmap": [
             "core",
-            "database",
-            "lib",
             "helpers"
         ],
         "psr-4": {
             "App\\": "app/",
             "App\\Controller\\": "app/controllers/",
-            "App\\Model\\": "app/models/"
+            "App\\Model\\": "app/models/",
+            "App\\Lib\\http\\": "app/lib/http/",
+            "App\\Lib\\Http\\HttpInterface\\": "app/lib/http/http-interface/"
         }
-    },
-    "require": {
-        "catfan/Medoo": "^1.4"
     }
 }
